# Beamer

./: README.md  env
beamer/: README.md  app.json  package-lock.json  package.json
beamer-server/: Dockerfile  README.md  glare_index.py  main.py  pyproject.toml  route_visualization.py  server.py  tb_glare_index.py  test_glare_consistency.py
beamer-server/tests/: test_sunglare.py
beamer/app/: _layout.tsx
beamer/app/(tabs)/: _layout.tsx  globe.tsx  index.tsx  maps.tsx  profile.tsx  saved.tsx
beamer/components/: LocationSearchInput.tsx
beamer/components/ui/: icon-symbol.tsx
beamer/config/: environment.ts
beamer/constants/: theme.ts
beamer/contexts/: RouteContext.tsx  SavedLocationsContext.tsx
beamer/services/: sunglare-api.ts
