[project]
name = "beamed-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.117.1",
    "googlemaps>=4.10.0",
    "httpx>=0.27",
    "matplotlib>=3.9.4",
    "pydantic>=2.11.9",
    "pysolar>=0.13",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2025.2",
    "uvicorn>=0.32.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
